[package]
name = "koreader-sync"
version = "0.1.0"
edition = "2021"
authors = ["MisLink <gjq.uoiai@outlook.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ['http'] }
worker-macros = { version = "0.6.0", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["wasm-bindgen"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
